--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 collection_test/
 TP_02/ejercicio_6/wiki-small/*
 TP_02/ejercicio_6/test/*
+TP_02/terrier/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
